misc: change target JAVA version to 11